# claude-provider-rs

./: Cargo.toml  Makefile  README.md  install.sh
src/: main.rs
src/config/: manager.rs  mod.rs  types.rs
src/provider/: anthropic.rs  detector.rs  glm.rs  mod.rs  switcher.rs  zai.rs
src/utils/: error.rs  install.rs  mod.rs  token.rs
