[package]
name = "claude-switch"
version = "2.2.0"
edition = "2021"
authors = ["Claude Switch Contributors"]
description = "Claude Code API Switcher - Switch between different API providers for Claude Code"
license = "MIT"
repository = "https://github.com/softkr/claude-provider"
keywords = ["claude", "api", "switcher", "anthropic", "z-ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-switch"
path = "src/main.rs"

[dependencies]
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
